Primitive types handle fixes
Former-commit-id: bc7d82b9a01d0ef0940a5f07b4a220637aa0dcd1